--- a/styles/custom.css
+++ b/styles/custom.css
@@ -15,3 +15,22 @@
 .wrapper {
   margin: 0 0 5rem;
 }
+
+.score-block {
+  background-color: black;
+  border-radius: 1rem;
+  width: 13%;
+  height: 70%;
+  position: absolute;
+  right: -18%;
+  bottom: 1rem;
+  color: black;
+}
+
+.score {
+  font-size: 200%;
+  color: white;
+  position: relative;
+  left: -1%;
+  bottom: -14%;
+}
