--- a/styles/custom.css
+++ b/styles/custom.css
@@ -16,14 +16,24 @@
   margin: 0 0 5rem;
 }
 
-.score-block {
+.rank-block {
   background-color: black;
-  border-radius: 1rem;
-  width: 13%;
-  height: 70%;
+  width: 500px;
+  height: 500px;
   position: absolute;
   right: -18%;
-  bottom: 1rem;
+  bottom: 15px;
+  color: black;
+}
+
+.score-block {
+  background-color: black;
+  border-radius: 20px;
+  width: 120px;
+  height: 60px;
+  position: absolute;
+  right: -18%;
+  bottom: 15px;
   color: black;
 }
 
@@ -33,4 +43,46 @@
   position: relative;
   left: -1%;
   bottom: -14%;
+}
+
+@media (max-width: 1000px) {
+  .score-block {
+    background-color: black;
+    border-radius: 15px;
+    width: 90px;
+    height: 50px;
+    position: absolute;
+    right: -18%;
+    bottom: 17px;
+    color: black;
+  }
+
+  .score {
+    font-size: 170%;
+    color: white;
+    position: relative;
+    left: -1%;
+    bottom: -14%;
+  }
+}
+
+@media (max-width: 800px) {
+  .score-block {
+    background-color: black;
+    border-radius: 12px;
+    width: 80px;
+    height: 40px;
+    position: absolute;
+    right: -18%;
+    bottom: 20px;
+    color: black;
+  }
+
+  .score {
+    font-size: 140%;
+    color: white;
+    position: relative;
+    left: -1%;
+    bottom: -15%;
+  }
 }
